       The blocking behavior can be reenabled by setting pass_allied_units=no
       in the [tunnel] tag.
   * Added text_alignment= key to [story][part] to specify horizonal alignment of
     text.
   * [set_variable] now supports abs= (absolute value), power= (raise to
     power) and root= (extracts root, 'square' is the only value currently
     supported) keys
 * Lua API:
   * Upgrade to Lua 5.3.3+
     Consult http://www.lua.org/ for a full change list and updated documenation.
     * bit32 functions removed
     * utf8 support added
   * Added new function wesnoth.fire_event_by_id to fire an event with a given ID.
   * Added new function wesnoth.remove_modifications, which removes applied
     modifications of the chosen type from a unit. The most efficient use is to
     remove all modifications with a specific duration value.
     Also callable as u:remove_modifications.
   * The built-in conditionals have_unit, have_location, and variable are now
     present in the wesnoth.wml_conditionals table. This means they can be
     directly called, extended with new features, or even overridden with custom
     implementations.
   * New recall_filter field in unit proxy returns the [filter_recall] config
   * New variations field in unit_type proxy returns a list of unit variations
     Each member is a full unit_type describing that variation.
     The table is iterable with pairs().
   * Lua side, unit_type, and unit attack proxies can now be compared with ==
     with identity semantics. (Previously, each time such a proxy was obtained,
     it would produce a new object that did not compare equal to any others.)
   * Lua unit_type lists (wesnoth.unit_types and unit_type.variations) are now
     countable with the Lua length operator.
   * Lua dialog functions now support the stacked widget and the unit preview pane
   * New wesnoth.show_menu function shows a dropdown menu at the mouse location